fix: aligning text with icons in lobby

--- a/src/game/lobby/styles.module.scss
+++ b/src/game/lobby/styles.module.scss
@@ -8,7 +8,8 @@
 }
 
 .first {
-  margin-left: 65px;
+  margin-left: 30px;
+  display: flex !important;
 }
 
 .second {
